--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">LO53Project</string>
 
     <string name="title_section1">Calibration</string>
-    <string name="title_section2">Detection</string>
+    <string name="title_section2">Location</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
