CALIBRATION : cancel button to permit user to cancel sending

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_send">Send</string>
+    <string name="action_cancel">Cancel</string>
 
     <string name="action_settings">Settings</string>
 </resources>
